@@ -1,19 +1,48 @@
+/*
+ * This file was generated by the Gradle 'init' task.
+ *
+ * This generated file contains a sample Java application project to get you started.
+ * For more details take a look at the 'Building Java & JVM projects' chapter in the Gradle
+ * User Manual available at https://docs.gradle.org/7.5/userguide/building_java_projects.html
+ */
+
 plugins {
-    id 'java'
+    // Apply the application plugin to add support for building a CLI application in Java.
+    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.1.0'
 }
 
-group = 'org.example'
-version = '1.0-SNAPSHOT'
-
 repositories {
+    // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
 
-dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+javafx {
+    version = "23"
+    modules = ['javafx.base','javafx.controls',  'javafx.swing', 'javafx.graphics','javafx.fxml']
 }
 
-test {
-    useJUnitPlatform()
+dependencies {
+    implementation 'com.squareup.retrofit2:retrofit:2.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.11.0'
+    //classpath "gradle.plugin.com.github.johnrengelman:shadow:7.1.2"
+
+}
+
+application {
+    mainClass = 'main.Main'
+    applicationDefaultJvmArgs = [
+            '--module-path', "${System.properties['java.home']}/lib",
+            '--add-modules', 'javafx.controls,javafx.fxml'
+    ]
+}
+
+
+sourceSets {
+    main {
+        resources {
+            srcDirs = ["src/main/java","src/main/resources"]
+            includes = ["**/*.fxml","**/*.jpg","**/*.png","**/*.css","**/*.ttf"]
+        }
+    }
 }
